<resources>
    <string name="app_name">Fit Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="do_not_have_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="already_have_account_log_in">Already have an account? Log in.</string>
    <string name="logo">Logo</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logout">Logout</string>
    <string name="planks">planks</string>
    <string name="tricep_dips">tricep_dips</string>
    <string name="squats">squats</string>
    <string name="pull_ups">pull_ups</string>
    <string name="push_ups">push_ups</string>
    <string name="lunges">lunges</string>
    <string name="flutter_kicks">flutter_kicks</string>
    <string name="bicycle_crunches">bicyle_crunches</string>
    <string name="side_planks">side_planks</string>
    <string name="dumbbell_curls">dumbbell_curls</string>
    <string name="name_of_workout">Name of Workout</string>
    <string name="add_workout">Add Workout</string>
    <string name="add_a_workout_note">Add a Workout Note</string>
    <string name="add_set">Add Set</string>
    <string name="workout_history">Workout History</string>
    <string name="workout">Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="Number" />
    <string name="finish">Finish</string>
</resources>