<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rvAddSets"
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameOfWorkout"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/name_of_workout"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etWorkoutNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_a_workout_note"
            android:inputType="textPersonName"
            android:text="@string/add_a_workout_note" />

        <TextView
            android:id="@+id/tvLabels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWorkoutSets"
            android:layout_width="match_parent"
            android:layout_height="215dp">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/btnAddSet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_set" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvWorkoutHistory"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_below="@+id/rvAddSets"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/workout_history"
        android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWorkOutHistory"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvWorkoutHistory"
        android:layout_margin="10dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="21dp">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>